--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=8080
-DB_LOCAL_DBNAME=instock
-DB_LOCAL_USER=root
-DB_LOCAL_PASSWORD=rootroot
+DB_DBNAME=instock
+DB_USER=root
+DB_PASSWORD=sqlroot
